fix nav logo on mobile form

--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,7 @@ a {
 }
 
 #form-logo {
-    width: 75%;
+    width: 85%;
 }
 
 #hero-logo {
